--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure Lighthouse 文档
-summary: Azure Lighthouse 具有更高的自动化程度、可伸缩性和增强的管理功能，可供服务提供商管理其所有客户的 Azure 资源。
+summary: Azure Lighthouse 允许跨租户和多租户管理，允许跨资源和租户提升自动化程度、可伸缩性并增强管理。
 metadata:
   title: Azure Lighthouse 文档
   description: Azure Lighthouse 具有更高的自动化程度、可伸缩性和增强的管理功能，可供服务提供商管理其所有客户的 Azure 资源。
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 07/20/2020
-  ms.openlocfilehash: f30f07fd200a5ac14e9733e5def7541b197004b2
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: 40352965db20c12e589f52f76869032d1f5f1b10
+  ms.sourcegitcommit: d18a59b2efff67934650f6ad3a2e1fe9f8269f21
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87072662"
+  ms.lasthandoff: 08/20/2020
+  ms.locfileid: "88659868"
 landingContent:
 - title: 关于 Azure Lighthouse
   linkLists:
