--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -8,19 +8,41 @@
       displayName: release notes
       href: release-notes.md
 - name: 快速入门
-  expanded: true
   items:
-    - name: 使用门户和 Wirecast 创建直播活动
-      displayName: 'live, event, portal, wirecast'
-      href: live-events-wirecast-quickstart.md
-    - name: 使用门户和 OBS 创建直播活动
-      displayName: 'live, event, portal, obs'
-      href: live-events-obs-quickstart.md
-    - name: 使用门户上传、编码和流式处理内容
-      href: manage-assets-quickstart.md
-    - name: 使用门户加密内容
-      displayName: 'protect, drm, aes'
-      href: encrypt-content-quickstart.md
+    - name: 设置你的环境
+      items:
+        - name: 查找你的 Azure 订阅
+          href: how-to-set-azure-subscription.md
+        - name: 创建媒体服务帐户
+          href: create-account-howto.md
+        - name: 访问 API
+          href: access-api-howto.md
+        - name: 设置 Azure Cloud Shell
+          href: 'https://docs.microsoft.com/azure/cloud-shell/overview'
+        - name: 使用 REST 进行开发
+          items:
+            - name: 使用 Postman 进行连接
+              href: media-rest-apis-with-postman.md
+        - name: 使用 SDK 进行开发
+          items:
+            - name: 通过 Java 进行连接
+              href: configure-connect-java-howto.md
+            - name: 使用 .NET 进行连接
+              href: configure-connect-dotnet-howto.md
+            - name: 使用 Node.js 进行连接
+              href: configure-connect-nodejs-howto.md
+            - name: 使用 Python 进行连接
+              href: configure-connect-python-howto.md
+    - name: 试用 Azure 门户中的媒体服务
+      items:
+        - name: 使用门户和 Wirecast 创建直播活动
+          href: live-events-wirecast-quickstart.md
+        - name: 使用门户和 OBS 创建直播活动
+          href: live-events-obs-quickstart.md
+        - name: 使用门户上传、编码和流式处理内容
+          href: manage-assets-quickstart.md
+        - name: 使用门户加密内容
+          href: encrypt-content-quickstart.md
 - name: 教程
   items:
     - name: 对远程文件进行编码并流式传输视频
@@ -56,6 +78,7 @@
     - name: 媒体服务 v3 REST 示例
       href: 'https://github.com/Azure-Samples/media-services-v3-rest-postman'
 - name: 概念
+  expanded: true
   items:
     - name: 概述
       href: concepts-overview.md
@@ -207,80 +230,42 @@
               href: live-event-error-codes.md
             - name: 作业错误代码
               href: job-error-codes.md
+        - name: 重置帐户凭据
+          href: cli-reset-account-credentials.md
     - name: 从 v2 迁移到 v3
       items:
         - name: v2 与 v3
           displayName: 'migrate, v2 to v3'
           href: media-services-v2-vs-v3.md
-        - name: 迁移指导
+        - name: 迁移指南
           href: migrate-from-v2-to-v3.md
           displayName: naming
 - name: 操作指南
   items:
-    - name: 入门
-      items:
-        - name: 查找你的 Azure 订阅
-          href: how-to-set-azure-subscription.md
-        - name: 创建媒体服务帐户
-          href: create-account-howto.md
-          displayName: 'portal, cli, storage'
-        - name: 访问 API
-          displayName: 'portal, cli'
-          href: access-api-howto.md
-        - name: 使用 REST 进行开发
-          items:
-            - name: 使用 Postman 进行连接
-              href: media-rest-apis-with-postman.md
-        - name: 使用 SDK 进行开发
-          items:
-            - name: 通过 Java 进行连接
-              href: configure-connect-java-howto.md
-            - name: 使用 .NET 进行连接
-              href: configure-connect-dotnet-howto.md
-            - name: 使用 Node.js 进行连接
-              href: configure-connect-nodejs-howto.md
-            - name: 使用 Python 进行连接
-              href: configure-connect-python-howto.md
-        - name: 重置帐户凭据
-          href: cli-reset-account-credentials.md
-    - name: 创建和管理资产
+    - name: 创建资产并上传媒体
       items:
         - name: 创建资产
           href: how-to-create-asset.md
-    - name: 上传内容
-      items:
-        - name: 从 HTTPS
-          displayName: upload
-          href: job-input-from-http-how-to.md
-        - name: 从本地文件
-          items:
-            - name: （使用 .NET）
-              displayName: upload
-              href: job-input-from-local-file-how-to.md
-            - name: 使用 REST
-              displayName: upload
-              href: upload-files-rest-how-to.md
-            - name: 使用 CLI
-              href: cli-upload-file-asset.md
+        - name: 上传媒体
+          href: how-to-upload-media.md
     - name: 创建转换和作业
       items:
         - name: 创建转换
           href: cli-create-transform.md
         - name: 创建作业
           href: cli-create-jobs.md
+        - name: 使用本地文件和 .NET 创建作业输入
+          displayName: upload
+          href: job-input-from-local-file-how-to.md
         - name: 具有多个转换输出的作业
           href: job-multiple-transform-outputs.md
     - name: 对内容进行编码
       items:
         - name: HTTPS 作为作业输入
-          displayName: 'encode, encoding'
           href: job-input-from-http-how-to.md
         - name: 本地文件作为作业输入
-          displayName: 'encode, encoding'
           href: job-input-from-local-file-how-to.md
         - name: 通过自定义转换进行编码
-        - name: 缩放媒体保留单位
-          href: media-reserved-units-cli-how-to.md
           items:
             - name: 使用 .NET
               displayName: 'encode, encoding, custom, transform'
@@ -299,6 +284,8 @@
               href: custom-preset-rest-howto.md
             - name: 使用 REST 生成缩略图
               href: media-services-generate-thumbnails-rest.md
+            - name: 缩放媒体保留单位
+              href: media-reserved-units-cli-how-to.md
         - name: 对视频进行子剪辑
           items:
             - name: （使用 .NET）
