--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -36,10 +36,6 @@
           href: virtual-wan-locations-partners.md
         - name: 面向合作伙伴的自动化指南
           href: virtual-wan-configure-automation-providers.md
-    - name: 定价概念
-      href: pricing-concepts.md
-    - name: 关于虚拟中心中的 NVA
-      href: about-nva-hub.md
     - name: 路由
       items:
         - name: 关于虚拟中心路由
@@ -56,13 +52,13 @@
               href: scenario-shared-services-vnet.md
             - name: 通过 NVA 路由
               href: scenario-route-through-nva.md
-            - name: 通过 NVA 路由 - 自定义（预览版）
+            - name: 通过 NVA 路由 - 自定义
               href: scenario-route-through-nvas-custom.md
             - name: Azure 防火墙 - 自定义
               href: scenario-route-between-vnets-firewall.md
     - name: 监视
       items:
-        - name: 关于虚拟 WAN 的 Azure Monitor 见解（预览版）
+        - name: 关于虚拟 WAN 的 Azure Monitor 见解
           href: azure-monitor-insights.md
     - name: 站点到站点
       items:
@@ -70,11 +66,15 @@
           href: virtual-wan-ipsec.md
         - name: 多个 ISP 链接 - Azure 路径选择
           href: path-selection-multiple-links.md
+    - name: 定价概念
+      href: pricing-concepts.md
+    - name: 关于虚拟中心中的 NVA
+      href: about-nva-hub.md
 - name: 操作指南
   items:
     - name: 升级虚拟 WAN SKU
       href: upgrade-virtual-wan.md
-    - name: 在虚拟中心中创建 NVA（预览版）
+    - name: 在虚拟中心创建 NVA
       href: How-to-nva-hub.md
     - name: ExpressRoute
       items:
@@ -154,14 +154,18 @@
   items:
     - name: 常见问题解答
       href: virtual-wan-faq.md
-    - name: Azure 路线图
-      href: 'https://azure.microsoft.com/roadmap/?category=networking'
-    - name: 博客
-      href: 'https://azure.microsoft.com/blog/topics/networking'
-    - name: 订阅和服务限制
-      href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=%2fazure%2fvirtual-wan%2ftoc.json
+    - name: 更新公告
+      href: 'https://azure.microsoft.com/updates/?category=networking&query=VIRTUAL%20WAN'
     - name: 定价
       href: 'https://azure.microsoft.com/pricing/details/virtual-wan'
+    - name: 订阅和服务限制
+      href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=%2fazure%2fvirtual-wan%2ftoc.json
+    - name: 网络路线图
+      href: 'https://azure.microsoft.com/roadmap/?category=networking'
+    - name: 网络博客
+      href: 'https://azure.microsoft.com/blog/topics/networking'
+    - name: 网络更新公告
+      href: 'https://azure.microsoft.com/updates/?category=networking'
     - name: 定价计算器
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: SLA
