commit translated contents

--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -126,6 +126,6 @@
   expanded: true
   items:
     - name: 访问评审 - Graph API
-      href: 'https://docs.microsoft.com/graph/api/resources/accessreviews-root?view=graph-rest-beta'
+      href: /graph/api/resources/accessreviews-root?view=graph-rest-beta
     - name: 权利管理 - Graph API
-      href: 'https://docs.microsoft.com/graph/api/resources/entitlementmanagement-root?view=graph-rest-beta'
+      href: /graph/api/resources/entitlementmanagement-root?view=graph-rest-beta
