--- a/articles/cognitive-services/form-recognizer/index.yml
+++ b/articles/cognitive-services/form-recognizer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: 51613a2233eaa643e8c846cccce7ca27effd6f7f
-  ms.sourcegitcommit: 3d79f737ff34708b48dd2ae45100e2516af9ed78
+  ms.openlocfilehash: c653a8afa3d15278a03655f71dccade6171db837
+  ms.sourcegitcommit: 5b6acff3d1d0603904929cc529ecbcfcde90d88b
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/23/2020
-  ms.locfileid: "87090818"
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "88723888"
 landingContent:
 - title: 关于表单识别器
   linkLists:
@@ -80,6 +80,20 @@ landingContent:
       url: quickstarts/curl-train-extract.md
     - text: 使用 REST API (cURL)
       url: quickstarts/curl-receipts.md
+  - linkListType: concept
+    links:
+    - text: 回执概念
+      url: concept-receipts.md?
+- title: 从名片提取数据
+  linkLists:
+  - linkListType: quickstart
+    links:
+    - text: 使用 REST API
+      url: quickstarts/python-business-cards.md?
+  - linkListType: concept
+    links:
+    - text: 名片概念
+      url: concept-business-cards.md?
 - title: 获取文本布局信息
   linkLists:
   - linkListType: quickstart
