--- a/articles/load-balancer/index.yml
+++ b/articles/load-balancer/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: asudbring
   ms.author: allensu
   ms.date: 05/07/2020
-  ms.openlocfilehash: 8049897cf7a08eeac79e4a217f4ecc3ec636eab9
-  ms.sourcegitcommit: 5cace04239f5efef4c1eed78144191a8b7d7fee8
+  ms.openlocfilehash: 0c1a007881734feb5e78b91cd835dae7022228df
+  ms.sourcegitcommit: 6fc156ceedd0fbbb2eec1e9f5e3c6d0915f65b8e
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/08/2020
-  ms.locfileid: "86143883"
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "88718792"
 landingContent:
 - title: 关于负载均衡器
   linkLists:
@@ -36,8 +36,10 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: 创建负载均衡器以对 VM 进行负载均衡
+    - text: 创建公共负载均衡器以对 VM 进行负载均衡
       url: quickstart-load-balancer-standard-public-portal.md
+    - text: 创建内部负载均衡器以对 VM 进行负载均衡
+      url: quickstart-load-balancer-standard-internal-portal.md
   - linkListType: tutorial
     links:
     - text: 对传入 VM 的 Internet 流量进行负载均衡
@@ -88,7 +90,7 @@ landingContent:
     links:
     - text: 通过指标、警报和资源运行状况进行标准负载均衡器诊断
       url: load-balancer-standard-diagnostics.md
-    - text: 排查 Azure 负载均衡器问题
+    - text: 对 Azure 负载均衡器进行故障排除
       url: load-balancer-troubleshoot.md
     - text: 常见的 Azure 负载均衡器错误
       url: load-balancer-common-deployment-errors.md
