commit translated contents

--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -1877,6 +1877,8 @@
           href: zscaler-zscloud-tutorial.md
         - name: Zwayam
           href: zwayam-tutorial.md
+        - name: Zylo
+          href: zylo-tutorial.md
 - name: 用户预配教程
   expanded: true
   items:
